src/main/java/org/example/interfaces/segregation/good/DBDaoInterface.java
package org.example.interfaces.segregation.good;

public interface DBDaoInterface {

    public void connect();
    public void disconnect();

}
